--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>811</width>
-    <height>769</height>
+    <width>865</width>
+    <height>822</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Bootleg NFO Builder for Plex</string>
+   <string>NFO Builder for Plex</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -21,104 +21,112 @@
    <property name="layoutDirection">
     <enum>Qt::LeftToRight</enum>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QFormLayout" name="ShowInfoForm">
-      <item row="0" column="0">
-       <widget class="QLabel" name="showNameLabel">
-        <property name="text">
-         <string>Show Name</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="showNameInput">
-        <property name="placeholderText">
-         <string>The shows name</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="showDateLabel">
-        <property name="text">
-         <string>Performance Date</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="showDateInput">
-        <property name="placeholderText">
-         <string>YYYY-MM-DD</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="showLocationLabel">
-        <property name="text">
-         <string>Location</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="showLocationInput">
-        <property name="placeholderText">
-         <string>Location/Studio</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="showTaglineLabel">
-        <property name="text">
-         <string>Tag Line</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="showTaglineInput">
-        <property name="placeholderText">
-         <string>A tagline for the show</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="showSynopsisLabel">
-        <property name="text">
-         <string>Synopsis</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QTextEdit" name="showSynopsisInput">
-        <property name="placeholderText">
-         <string>A brief synopsis of the show, or notes</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="showPosterLabel">
-        <property name="text">
-         <string>Show Poster URL</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1">
-       <widget class="QLineEdit" name="showPosterInput">
-        <property name="placeholderText">
-         <string>Full URL to image to use as Poster</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <layout class="QFormLayout" name="formLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="showNameLabel">
+      <property name="text">
+       <string>Show Name</string>
+      </property>
+     </widget>
     </item>
-    <item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="showNameInput">
+      <property name="placeholderText">
+       <string>The shows name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="showDateLabel">
+      <property name="text">
+       <string>Performance Date</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="showDateInput">
+      <property name="placeholderText">
+       <string>YYYY-MM-DD</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="showLocationLabel">
+      <property name="text">
+       <string>Location</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="showLocationInput">
+      <property name="frame">
+       <bool>true</bool>
+      </property>
+      <property name="placeholderText">
+       <string>Location/Studio</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="showTaglineLabel">
+      <property name="text">
+       <string>Tag Line</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLineEdit" name="showTaglineInput">
+      <property name="placeholderText">
+       <string>A tagline for the show</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="showSynopsisLabel">
+      <property name="text">
+       <string>Synopsis</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QTextEdit" name="showSynopsisInput">
+      <property name="placeholderText">
+       <string>A brief synopsis of the show, or notes</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="showPosterLabel">
+      <property name="text">
+       <string>Show Poster URL</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1">
+     <widget class="QLineEdit" name="showPosterInput">
+      <property name="placeholderText">
+       <string>Full URL to image to use as Poster</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0">
      <widget class="QLabel" name="CastLabel">
       <property name="text">
        <string>Cast Members</string>
       </property>
      </widget>
     </item>
-    <item>
+    <item row="8" column="0" colspan="2">
      <widget class="QTableWidget" name="castTable">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>300</height>
+       </size>
+      </property>
       <property name="rowCount">
        <number>40</number>
       </property>
@@ -202,23 +210,218 @@
         <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsDropEnabled|ItemIsEnabled</set>
        </property>
       </item>
+      <item row="1" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="2" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="3" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="4" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="5" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="6" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="7" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="8" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="9" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="10" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="11" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="12" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="13" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="14" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="15" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="16" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="17" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="18" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="19" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="20" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="21" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="22" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="23" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="24" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="25" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="26" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="27" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="28" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="29" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="30" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="31" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="32" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="33" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="34" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="35" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="36" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="37" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="38" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="39" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
      </widget>
     </item>
-    <item>
+    <item row="19" column="0">
      <widget class="QLabel" name="outputFolderLabel">
       <property name="text">
        <string>Output folder</string>
       </property>
      </widget>
     </item>
-    <item>
+    <item row="19" column="1">
      <widget class="QLineEdit" name="outputFolderInput">
       <property name="placeholderText">
        <string>e.g C:/Users/Pete/Desktop</string>
       </property>
      </widget>
     </item>
-    <item>
+    <item row="20" column="0" colspan="2">
      <widget class="QPushButton" name="CreateNFO">
       <property name="text">
        <string>Create NFO</string>
@@ -233,7 +436,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>811</width>
+     <width>865</width>
      <height>30</height>
     </rect>
    </property>
